--- a/templates/form.html
+++ b/templates/form.html
@@ -60,6 +60,7 @@
             color: #666;
         }
 
+
         input, .checks {
             width: 100%;
             padding: 12px 15px;
@@ -231,8 +232,8 @@
         outline: 0;
       }
       .checkbox-wrapper-12 .cbx {
-        width: 24px;
-        height: 24px;
+        max-width: 20px;
+        max-height: 20px;
         top: calc(50vh - 12px);
         left: calc(50vw - 12px);
       }
@@ -240,14 +241,14 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 24px;
-        height: 24px;
+        width: 20px!important;
+        height: 20px!important;
         border: 2px solid #bfbfc0;
         border-radius: 50%;
       }
       .checkbox-wrapper-12 .cbx label {
-        width: 24px;
-        height: 24px;
+        width: 32px;
+        height: 30px;
         background: none;
         border-radius: 50%;
         position: absolute;
@@ -321,6 +322,8 @@
           box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
         }
       }
+
+
     </style>
 
 </head>
@@ -359,11 +362,16 @@
                         {% elif item.type == 'dropdown' %}
                             <div class="checks" id="{{ item.prompt | replace(' ','_') }}">
                                 {% for option in item.options %}
-                                <label>
-                                    <div class="checkbox-wrapper-12">
+                                <div style="border: 2px solid #d8d8d9; 
+                                            border-radius: 25px;
+                                            padding: 15px;
+                                            display: flex;
+                                            justify-content: center;
+                                            flex-direction: column;">
+                                    <div class="checkbox-wrapper-12" style="margin-top: -10px">
                                       <div class="cbx">
-                                        <input id="cbx-12" type="checkbox" name="{{ item.prompt }}" value="{{ option }}"/>
-                                        <label for="cbx-12"></label>
+                                        <input style="width: 15px;height: 24px;box-sizing: border-box;" type="checkbox" name="{{ item.prompt }}[]" value="{{ option }}" />
+                                        <label></label>
                                         <svg width="15" height="14" viewbox="0 0 15 14" fill="none">
                                           <path d="M2 8.36364L6.23077 12L13 2"></path>
                                         </svg>
@@ -379,8 +387,8 @@
                                         </defs>
                                       </svg>
                                     </div>
-                                    {{ option }}
-                                </label><br>
+                                    <span style="margin-top: 2px">{{ option }}</span>
+                                </div><br/><br/>
                                 {% endfor %}
                             </div>
                         {% elif item.type == 'file' %}
@@ -396,7 +404,7 @@
                 <p>You're done. If you have any edits, click below, else submit.</p>
                 <br/>
                 <button id="editButton" type="button">Edit</button>
-                <button type="submit" id="submitButton" onclick="document.getElementById('dynamicForm').submit()">Submit</button>
+                <button type="submit" id="submitButton" onclick="validateAndSubmitForm()">Submit</button>
             </div>
         </form>
 
@@ -539,5 +547,32 @@
     });
 
     </script>
+
+    <script>
+    function validateAndSubmitForm() {
+      var form = document.getElementById('dynamicForm');
+      var missingFields = [];
+      
+      // Loop through form elements
+      for (var i = 0; i < form.elements.length; i++) {
+        var element = form.elements[i];
+        
+        // Check if the element is required and not filled
+        if (element.hasAttribute('required') && element.value === "") {
+          missingFields.push(element.name);  // Add missing field name
+        }
+      }
+      
+      // If there are missing fields, alert and reload the page
+      if (missingFields.length > 0) {
+        alert("The following fields are required: " + missingFields.join(", "));
+        location.reload();  // Reload the page
+      } else {
+        // Submit the form if all required fields are filled
+        form.submit();
+      }
+    }
+    </script>
+
 </body>
 </html>
