--- a/templates/form.html
+++ b/templates/form.html
@@ -338,7 +338,7 @@
             <button id="themeSwitchBtn">Switch Theme</button>
         </div>
 
-        <form id="dynamicForm" action="/submit" method="POST" enctype="multipart/form-data">
+        <form id="dynamicForm" action="/submit" method="POST" enctype="multipart/form-data" style="z-index: 999!important;">
             <div class="keyboard-nav" id="keyboard-nav">Use ← or → keys to navigate</div><br/><br/>
                     <div class="question active" data-prompt="Hi!">
                         <h2 class="prompt">Hi!</h2>
